[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "var"
version = "1.0.0"
description = "Visual AutoRegressive Modeling: Scalable Image Generation via Next-Scale Prediction"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.1.0",
    "Pillow",
    "huggingface_hub",
    "numpy",
    "pytz",
    "transformers",
    "typed-argument-parser",
]

[tool.setuptools]
packages = ["models"]
py-modules = ["dist"]